# DigitInterface.jl

./: .gitignore  CondaPkg.toml  Manifest.toml  Project.toml  README.md
examples/: actuate_gripper.jl  get_generalized_coordinates.jl  get_pointcloud.jl  standing_reference_controller.jl
src/: DigitInterface.jl  compile.jl  get.jl  set.jl
src/camera/: run_camera.sh
src/gripper/: gripper.py
src/highlevel/: hl_comms.py  hlcomms.jl
src/lowlevel/: constants.jl  get.jl  initialize.jl  ll_comms.py  set.jl  sim_set_ll_mode.sh  types.jl  utils.jl
src/lowlevel/sim/: run_camera.sh  sim_set_locomotion_mode.sh
src/lowlevel/source/: CMakeLists.txt
src/ros_lowlevel/: ll_comms.py
src/ros_lowlevel/sim/ws/src/perception/: CMakeLists.txt
test/: runtests.jl  test_camera.jl  test_generalized_coordinates.jl  test_standing_ref.jl
test/ccall_debug/: CMakeLists.txt  julia.jl
test/ccall_debug/libartl/: Makefile
